Fix sizing select components, fix grid on overflow elements

--- a/less/formir/core/components/select.less
+++ b/less/formir/core/components/select.less
@@ -36,7 +36,7 @@
 
 .select-close-content-core() {
   .display-flex;
-  min-height: calc( @input-default-line-height ~"+" @input-default-padding-vertical * 2 ~"+" @input-default-border-width * 2 );
+  min-height: inherit;
   padding-right: @input-default-padding-horizontal;
   input {
     &[type="checkbox"] {
