--- a/less/formir/core/layouts/grid.less
+++ b/less/formir/core/layouts/grid.less
@@ -398,6 +398,7 @@
   .flex-wrap(wrap);
   .flex-direction(row);
   .align-items(stretch);
+  max-width: 100%;
   &.@{content-holder} {
     margin-left: auto;
     margin-right: auto;
@@ -762,6 +763,7 @@
   .flex(1 1 100%);
   .display-flex;
   .flex-wrap(inherit);
+  max-width: 100%;
   &:not([class*="@{grid}"]) {
     .flex-direction(inherit);
   }
